fixed spacing and font size in mobile version

--- a/style.css
+++ b/style.css
@@ -20,26 +20,26 @@ html, html * {
 h1 {
     font-weight: 700;
     font-size: 6vh;
-    margin-bottom: 4vh;
+    margin-bottom: 2vh;
 
 }
 
 h2 {
     font-weight: 400;
     font-size: 2.5vh;
-    margin-bottom: 4vh;
+    margin-bottom: 2vh;
   
 }
 
 h4 {
     font-weight: 700;
-    font-size: 1.5vh;
+    font-size: 2vh;
     color: #FF0A0A;
 }
 
 p {
     font-weight: 400;
-    font-size: 2vh;
+    font-size: 2.5vh;
     margin-bottom: 4vh;
 }
 
@@ -122,7 +122,7 @@ header {
     background-size: cover;
     /* padding: top right bottom left */ 
     /* padding: 20px 30px 50px 30px; */
-    padding: 2vh 3vh 5vh 3vh;
+    padding: 2vh 5vh 10vh 5vh;
     /* figure out how to decrease line height on mobile*/ 
     text-align: center;
 }
@@ -132,20 +132,25 @@ header {
     /* padding: 30px 20px 60px; */
     /* padding: 3vh 3vh 6vh 3vh; */
 
-    padding: 5vh 3vh 5vh 3vh;
+    padding: 15vh 5vh 15vh 5vh;
     text-align: center;
 }
 
 
 /* - FEATURED BAKERIES - */
 .featbakeries-box {
-    padding: 5vh 3vh 5vh 3vh;
+    padding: 15vh 5vh 15vh 5vh;
     text-align: center;
 }
 
 .featbakeries-box h1 {
     font-size: 3vh;
     margin-bottom: 1vh;
+}
+
+.featbakeries-box h2 {
+    margin-bottom: 1.5vh;
+
 }
 
 
